# fastapi-example

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  lint.yml
alembic/: env.py
alembic/versions/: b488f275b530_add_cascading_delete_for_orders.py  da5124754da0_initial_migration.py
src/: main.py
src/core/: config.py
src/core/settings/: app.py  base.py
src/db/: database.py  models.py
src/db/queries/: customer.py
src/routers/: customer.py  order.py
src/schemas/: customer.py  order.py
tests/: conftest.py
tests/routes/: test_customer.py  test_order.py
tests/utils/: customer.py  order.py  utils.py
