[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["Mateusz Kiersnowski <mateusz.kiersnowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
