[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["Mateusz Kiersnowski <mateusz.kiersnowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
gunicorn = "^22.0.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
pre-commit = "^3.7.1"
asyncpg = "^0.29.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I"] # I - Isort
